# yugioh_cardlist_scraper

./: pyproject.toml
