[tool.poetry]
name = "yugioh-cardlist-scraper"
version = "0.1.0"
description = "This is a very simple python script that is used to scrape the KONAMI website to acquire a complete list of all yugioh cards (and their respective card information) into csv files. This can serve as a great tool for developers interested in the yugioh domain."
authors = ["Pietracoops <Pietracoops@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
about-time = "^4.2.1"
alive-progress = "^3.1.5"
beautifulsoup4 = "^4.12.3"
bs4 = "^0.0.2"
certifi = "^2024.7.4"
charset-normalizer = "^3.3.2"
gitdb = "^4.0.11"
gitpython = "^3.1.43"
grapheme = "^0.6.0"
idna = "^3.7"
langdetect = "^1.0.9"
pathlib = "^1.0.1"
requests = "^2.32.3"
six = "^1.16.0"
smmap = "^5.0.1"
soupsieve = "^2.5"
style = "^1.1.6"
urllib3 = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
